--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation "androidx.work:work-runtime-ktx:2.7.1"
 
+    def fragment_version = "1.3.6"
+    implementation "androidx.fragment:fragment-ktx:1.4.0"
+
 }
